<resources>
    <string name="app_name">Agency</string>

    <string name="alert_loading">Loading. Please wait</string>
    <string name="error_no_internet">No internet</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="login_error_empty_field">Field can\'t be empty</string>
    <string name="login_wrong_email_password">Wrong login or password! Please try again</string>


    <string name="menu_agency">Agency</string>
    <string name="menu_costs">Costs</string>
    <string name="menu_profile">Profile</string>

    // AGENCY
    <string name="vehicle">Label</string>

    // COSTS
    <string name="no_history_data">No history data</string>

    // PROFILE
    <string name="user_name">User Name</string>
    <string name="logout_confirmation">Logout from your account?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="menu_manage">Manage Accounts</string>
    <string name="title_manage">Manage accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_role">Role</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_start_date">Start date</string>
    <string name="menu_register">Register account</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="title_create_account">Register account</string>
    <string name="user_created">User registered!</string>
    <string name="wrong_login_data">Wrong user data!</string>
    <string name="hint_password">Password</string>
    <string name="name_cant_be_empty">Name can\'t be empty</string>
    <string name="saved">Saved!</string>
    <string name="done">Done</string>
    <string name="done_hrs">DONE HRS</string>
    <string name="orders_done">ORDERS</string>
    <string name="hrs_done">HOURS</string>
    <string name="orders_remains">REMAINS</string>
    <string name="menu_add_order">Add order</string>
    <string name="title_create_order">New Order</string>
    <string name="hint_client_name">Client Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_order_date">Order date</string>
    <string name="order_created">Order created!</string>

</resources>
