<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="66dp">

        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/img_logo"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="67dp"
            android:text="@string/login_username"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp">

            <EditText
                android:id="@+id/edit_login"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@android:color/white"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16sp"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@android:color/white"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16sp"/>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:src="@drawable/img_afjord"/>-->
    </LinearLayout>
</ScrollView>